Verif/Test/Invalide/test_erreur_3.83-2.deca
// Description:
//    Programme soulevant l'erreur (3.83)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Le type 'type_null' est incompatible avec  l'opérateur unaire '-' (règle 3.83)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

int var;
{
    var = -null ;
}